# prefab-shapes

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
app/: Cargo.toml
app/src/: main.rs
example/: Cargo.toml
example/src/: egui_sdl2.rs  main.rs
example2/: Cargo.toml
example2/src/: main.rs
res/: icon.tga
src/: lib.rs  main.rs  platonic_solids.rs  polygons.rs
src/prefab/: kepler_poinsot.rs  linear_algebra.rs  mod.rs  pentagonal.rs  platonic_solid.rs  platonic_solids.rs  polygon.rs  polygons.rs  polyhedral.rs  unit_test.rs
src/shapes/: configuration.rs  mod.rs  platonic_solids.rs  polygons.rs  shape.rs  shaper.rs
