[package]
name = "shapes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.24"
glium = "0.34"
winit = "0.29"
glutin-winit = "0.4"
raw-window-handle = "0.5"
simple_targa = { path = "../simple_targa" }
