[workspace]
members = [".", "example"]

[package]
name = "prefab-shapes"
version = "0.1.0"
authors = ["justincredible <justinjfsymonds@hotmail.com>"]
description = "Simple shape data for graphics APIs."
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/justincredible/prefab-shapes"
keywords = ["graphics", "shapes"]
edition = "2024"

[dependencies]
num-traits = "0.2"
